[tool.poetry]
name = "papers-agent"
version = "0.1.0"
description = ""
authors = ["aoda2 "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.58.1"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
