[tool.poetry]
name = "put-embedding"
version = "0.1.0"
description = ""
authors = ["aoda2 "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.58.1"
langgraph = "^0.2.60"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
